[package]
name = "validate-mysql"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rust_xlsxwriter = "0.89.1"
itertools = "0.12"
regex = "1"
url = "2.5"
mysql_async = { version = "0.33", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }